fixed white space bug, fixed modale bug, added description slider toggle (wip)

--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -103,8 +103,6 @@ body {
         text-wrap: wrap;
         width: 90%;
     }
-
-    width: 34em;
     /* padding: 1em; */
     /* display: flex; */
     margin: 1em 0.5em 0 0.5em;
@@ -136,8 +134,9 @@ body {
         font-family: Victor Mono;        
         font-weight: 200;
         margin: 0;
-        display: flex;
+        display: block;
         text-wrap: wrap;
+        white-space: pre-line;
         width: 100%;       
     }
 }
@@ -393,3 +392,51 @@ body {
     background: none;
   }
   
+  .switch {
+    position: relative;
+    display: inline-block;
+    margin-right: 7px;
+    margin-top: 2px;
+    width: 42px;
+    height: 18px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 11px;
+    width: 11px;
+    border-radius: 50%;
+    left: 4px;
+    bottom: 3.8px;
+    background-color: var(--primary-color);
+    transition: 0.4s;
+}
+
+input:checked + .slider {
+    background-color: var(--button-color);
+}
+
+input:checked + .slider:before {
+    transform: translateX(23.5px);
+}
